crates/jni/tests/ui/native_method/fail/wrong_return_type.stderr
error[E0308]: mismatched types
  --> tests/ui/native_method/fail/wrong_return_type.rs:15:19
   |
15 |       let _method = native_method! {
   |  ___________________^
16 | |         name = "myMethod",
17 | |         sig = () -> jint,
18 | |         fn = my_method_impl
19 | |     };
   | |     ^
   | |     |
   | |_____expected `i32`, found `i64`
   |       expected `i32` because of return type
   |
   = note: this error originates in the macro `native_method` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can convert an `i64` to an `i32` and panic if the converted value doesn't fit
   |
19 |     }.try_into().unwrap();
   |      ++++++++++++++++++++
